kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todolist-frontend-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
  selector:
    app: todolist-frontend
